feat: implement endpoints
